# cookiecutter_uagents_utility

./: .flake8  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_create_template.py  utils.py
{{cookiecutter.utility_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml
{{cookiecutter.utility_slug}}/.github/workflows/: check-linting.yml  publish_pypi.yml
{{cookiecutter.utility_slug}}/docs/: index.md
{{cookiecutter.utility_slug}}/macros/: rst
{{cookiecutter.utility_slug}}/{{cookiecutter.utility_slug}}/: __init__.py  models.py
{{cookiecutter.utility_slug}}/{{cookiecutter.utility_slug}}/protocols/: {{cookiecutter.protocol_module_name}}.py
{{cookiecutter.utility_slug}}/{{cookiecutter.utility_slug}}/wrappers/: {{cookiecutter.protocol_module_name}}Wrapper.py
