[tool.poetry]
name = "cookiecutter-uagents-utility"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cookiecutter_uagents_utility"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
cookiecutter = "2.1.1"
flake8 = "6.0.0"
pre-commit = "3.3.3"
pytest-cookies = "0.7.0"
pytest = "7.4.0"
binaryornot = "0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
