[tool.poetry]
name = "{{cookiecutter.pypi_plugin_name}}"
#{% raw %}
version = '0.0.0'
#{% endraw %}
description = ""
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]
readme = "README.rst"
repository = "{{cookiecutter.github_url}}"
packages = [{include = "{{cookiecutter.utility_slug}}"}]
classifiers=[
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    {% if cookiecutter.open_source_license == "MIT" -%}
    'License :: OSI Approved :: MIT License',
    {%- elif cookiecutter.open_source_license == "BSD-3" -%}
    'License :: OSI Approved :: BSD License',
    {%- elif cookiecutter.open_source_license == "GPLv3" -%}
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    {%- elif cookiecutter.open_source_license == "Apache Software License 2.0" -%}
    'License :: OSI Approved :: Apache Software License',
    {%- endif %}
]
[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
uagents = "0.8.1"
{% if cookiecutter.use_linting == "y" %}
flake8 = "6.0.0"
pre-commit = "3.3.3"
{% endif %}
python-decouple = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
